// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details when given a container it renders a ContainerDetails component 1`] = `
<ContainerDetails
  classes={
    Object {
      "centeredSection": "makeStyles-centeredSection-1",
      "detailText": "makeStyles-detailText-4",
      "listItem": "makeStyles-listItem-3",
      "raw": "makeStyles-raw-2",
      "typeValue": "makeStyles-typeValue-5",
    }
  }
  iri="iri"
  name="container"
/>
`;

exports[`Details when given a resource it renders a ResourceDetails component 1`] = `
<ResourceDetails
  classes={
    Object {
      "centeredSection": "makeStyles-centeredSection-1",
      "detailText": "makeStyles-detailText-4",
      "listItem": "makeStyles-listItem-3",
      "raw": "makeStyles-raw-2",
      "typeValue": "makeStyles-typeValue-5",
    }
  }
  iri="iri"
  name="container"
/>
`;

exports[`Details when given an unknown resource it renders an Unknown resource message 1`] = `
<p>
  Unknown resource
</p>
`;
